# fih-win32

./: .gitignore  CMakeLists.txt  README.md  README.pl.md  prepare.bat  prepare.sh  win32-toolchain.cmake
assets/: genico.sh
inc/: graphics.h  main.h  util.h
src/: fih.rc  graphics.cpp  main.c  util.c
